--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     tmpfs: /app/tmp
     depends_on:
       - db
-    env_file: app.env
+    env_file: .env
     tty: true
     stdin_open: true
     ports:
